--- a/playground/app/globals.css
+++ b/playground/app/globals.css
@@ -4,7 +4,7 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
-  --font-jgs: var(--font-jgs);
+  --font-geist-mono: var(--font-geist-mono);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -45,7 +45,7 @@
 }
 
 :root {
-  --font-jps: var(--font-jps);
+  --font-geist-mono: var(--font-geist-mono);
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.141 0.005 285.823);
